fix open menu on mobile

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -93,7 +93,7 @@
   display: flex;
   flex-direction: column;
   position: absolute;
-  top: 9%;
+  top: 7%;
   right: 5%;
   z-index: 1;
   -webkit-user-select: none;
@@ -147,7 +147,7 @@
 
 .menuToggle input:checked~span:nth-last-child(3) {
   opacity: 0;
-  transform: rotate(0deg) scale(0.2, 0.2);
+  transform: rotate(0deg) scale(1, 1);
 }
 
 .menuToggle input:checked~span:nth-last-child(2) {
@@ -161,7 +161,7 @@
   top: 53%;
   left: 50%;
   transform: translate(-50%, -52%);
-  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+  transition: transform 0.3s cubic-bezier(0.77, 0.2, 0.05, 1.0);
 }
 
 .menu li {
